// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`FormFieldSet > renders correctly with class 1`] = `
<div>
  <fieldset
    class="mt-2 rounded-md border border-default px-4 pb-4 custom-class"
    data-slot="root"
  >
    <legend
      class="font-medium text-default text-base"
      data-slot="legend"
    >
      Legend
    </legend>
    
    
  </fieldset>
</div>
`;

exports[`FormFieldSet > renders correctly with collapsible 1`] = `
<div>
  <fieldset
    class="mt-2 rounded-md border border-default px-4 pb-4"
    data-slot="root"
    data-state="open"
  >
    
    <legend
      class="font-medium text-default text-base"
      data-slot="legend"
    >
      <button
        aria-controls=""
        aria-disabled="false"
        aria-expanded="true"
        class="inline-flex items-center justify-center rounded-md transition-colors hover:cursor-pointer focus-visible:outline-2 focus-visible:outline-offset-2 disabled:cursor-not-allowed disabled:opacity-75 aria-disabled:cursor-not-allowed aria-disabled:opacity-75 disabled:bg-transparent aria-disabled:bg-transparent gap-2 px-3 py-2 text-base text-default hover:bg-elevated focus-visible:outline-inverted active:bg-elevated"
        data-slot="base"
        data-state="open"
        type="button"
      >
        
        <svg
          aria-hidden="true"
          class="shrink-0 size-5"
          data-slot="leadingIcon"
          height="1em"
          role="img"
          viewBox="0 0 16 16"
          width="1em"
          xmlns="http://www.w3.org/2000/svg"
          xmlns:xlink="http://www.w3.org/1999/xlink"
        />
        
        
        <span
          class="truncate"
          data-slot="label"
        >
          Legend
        </span>
        
        
        <!--v-if-->
        
      </button>
    </legend>
    <div
      class="overflow-hidden data-[state=closed]:animate-[collapsible-up_200ms_ease-out] data-[state=open]:animate-[collapsible-down_200ms_ease-out]"
      data-slot="content"
      id="reka-collapsible-content-v-0"
      style="--reka-collapsible-content-height: 0px; --reka-collapsible-content-width: 0px; transition-duration: 0s; animation-name: none;"
    >
      
      
    </div>
    
  </fieldset>
</div>
`;

exports[`FormFieldSet > renders correctly with legend 1`] = `
<div>
  <fieldset
    class="mt-2 rounded-md border border-default px-4 pb-4"
    data-slot="root"
  >
    <legend
      class="font-medium text-default text-base"
      data-slot="legend"
    >
      Legend
    </legend>
    
    
  </fieldset>
</div>
`;

exports[`FormFieldSet > renders correctly with size lg 1`] = `
<div>
  <fieldset
    class="mt-2 rounded-md border border-default px-4 pb-4"
    data-slot="root"
  >
    <legend
      class="font-medium text-default text-base"
      data-slot="legend"
    >
      Legend
    </legend>
    
    
  </fieldset>
</div>
`;

exports[`FormFieldSet > renders correctly with size md 1`] = `
<div>
  <fieldset
    class="mt-2 rounded-md border border-default px-4 pb-4"
    data-slot="root"
  >
    <legend
      class="font-medium text-default text-sm"
      data-slot="legend"
    >
      Legend
    </legend>
    
    
  </fieldset>
</div>
`;

exports[`FormFieldSet > renders correctly with size sm 1`] = `
<div>
  <fieldset
    class="mt-2 rounded-md border border-default px-4 pb-4"
    data-slot="root"
  >
    <legend
      class="font-medium text-default text-xs"
      data-slot="legend"
    >
      Legend
    </legend>
    
    
  </fieldset>
</div>
`;

exports[`FormFieldSet > renders correctly with ui 1`] = `
<div>
  <fieldset
    class="mt-2 border border-default px-4 pb-4 rounded-lg"
    data-slot="root"
  >
    <legend
      class="font-medium text-default text-base"
      data-slot="legend"
    >
      Legend
    </legend>
    
    
  </fieldset>
</div>
`;
